Added static pages and change api routes to start with api/..

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=sheshapay
 server.port=8080
 
+spring.jackson.time-zone=Africa/Johannesburg
 spring.datasource.url=jdbc:h2:mem:sheshapaydb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -9,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+logging.level.org.springframework.security=DEBUG
 
 
 jwt.secret=MySuperLongSecretKeyForJwtThatShouldBe32CharsMin
